
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LDOUBLE ;



__attribute__((used)) static LDOUBLE abs_val(LDOUBLE value)
{
 LDOUBLE result = value;

 if (value < 0)
  result = -value;

 return result;
}
